Add initial Jigsaw compiler implementation